--- a/charity_donation/donation/templates/index.html
+++ b/charity_donation/donation/templates/index.html
@@ -19,13 +19,14 @@
 <section id="stats" class="stats">
   <div class="container container--85">
     <div class="stats--item">
-      <em>10</em>
+
+      <em>{{ bags }}</em>
       <h3>Oddanych worków</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
     </div>
 
     <div class="stats--item">
-      <em>5</em>
+      <em>{{ institutions_amount }}</em>
       <h3>Wspartych organizacji</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
     </div>
@@ -129,42 +130,20 @@
       quos suscipit corporis!
     </p>
     <ul class="help--slides-items">
-      <li>
-        <div class="col">
-          <div class="title">Organizacja 1</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
+{% for institution in institutions %}
+     <li>
+       <div class="col">
+        {% if institution.type == 2 %}        
+         <div class="title">{{ institution.name }}</div>
+          <div class="subtitle">{{ institution.description }}</div>        
         </div>
-
-        <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
+        <div class="col"><div class="text">Lorem ipsum</div></div>
+        {% endif %}        
       </li>
-
-      <li>
-        <div class="col">
-          <div class="title">Organizacja 2</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-        </div>
-
-        <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-      </li>
-
-      <li>
-        <div class="col">
-          <div class="title">Organizacja 3</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-        </div>
-
-        <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-      </li>
-
-      <li>
-        <div class="col">
-          <div class="title">Organizacja 4</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-        </div>
-
-        <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-      </li>
+{% endfor %}
     </ul>
+
+
 
     <!-- Pagination
     <ul class="help--slides-pagination">
@@ -181,24 +160,19 @@
   <div class="help--slides" data-id="3">
     <p>Lorem ipsum dolor sit amet, his ocurreret persequeris ea, ad utinam laudem duo. Verterem adipisci partiendo eos ne, ea his reque quaeque recteque, ne quo lobortis intellegam.</p>
     <ul class="help--slides-items">
+  {% for institution in institutions %}
+  {% if institution.type == 3 %}
       <li>
         <div class="col">
-          <div class="title">Lokalna zbiórka 1</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
+          <div class="title">{{ institution.name }}</div>
+          <div class="subtitle">{{ institution.description }}</div>
         </div>
 
         <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
+        {% endif %}
       </li>
+  {% endfor %}
 
-      <li>
-        <div class="col">
-          <div class="title">Lokalna zbiórka 2</div>
-          <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-        </div>
-
-        <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-      </li>
-    </ul>
 
     <!-- Pagination
     <ul class="help--slides-pagination">
